# Machine-Learning

./: .gitignore  CMakeLists.txt
Code/LifeSat/: Life Satisfication.ipynb
Documentation/: Fundamentals of Machine Learning.pptx  Numpy.key  Panda.key  Sklearn.key
examples/: CMakeLists.txt  csv_reader.cpp
